# diff

./: .gitignore  notes.txt  test.txt
diff-cpp/: Makefile  test.cpp
diff-rs/: Cargo.toml
diff-rs/src/: diff.rs  hashing.rs  main.rs  merkle.rs  util.rs  vc.rs  vc_serialize.rs
